# tiny_srpske_epske_pesme

./: .env.example  LICENSE  README.md  pyproject.toml  scrape.ipynb
data_final/: ciklusi_scrape.json  link_check_results.json  sve_srpske_epske_pesme.txt
