[project]
name = "tiny-epske-pesme"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "fastcore>=1.8.2",
    "fastprogress>=1.0.3",
    "firecrawl>=2.7.1",
    "google-genai>=1.19.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.3",
    "requests>=2.32.3",
    "tenacity>=9.1.2",
]
